[project]
name = "light360"
version = "0.1.0"
description = "360deg video to light coordinate."
authors = [
    { name = "Akito Miura", email = "phenomer@g.hachune.net" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/light360"]
